# msvst

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE.CeCILL  MANIFEST.in  README.md  setup.py
docs/: example.ipynb
docs/data/: grid.fits  rosseta.fits
modules/: functions.cmake
msvst/: __init__.py  msvst.py  wrapper.py
src/libmsvst/: Atrous.h  Atrous2D1D.h  B3VSTAtrous.h  B3VSTAtrous2D1D.h  ImLib_msvst.h
src/libtools/: Border.h
src/msvst/: msvst_2d1d.cc  msvst_iwt2d.cc  msvst_iwt2d_coupled.cc
